--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
         </div>
         </div><br><br>
         <div class="ux-title-section">
-        <h2>View All Projects</h2>
+       
+        <h2 style="color:#ffa011;">View All Projects</h2>
 </div>
 
          <!-- Footer section -->
